공통 모듈 분리

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&family=Sunflower:wght@500&display=swap" rel="stylesheet">
   <!-- icon -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <!-- COMMON CSS -->
+  <link rel="stylesheet" href="./css/common.css"/>
   <!-- MAIN CSS -->
   <link rel="stylesheet" href="./css/main.css"/>
   <!-- THROTTLE  -->
@@ -38,12 +40,15 @@
   <!-- SWIPER -->  
   <link rel="stylesheet" href="https://unpkg.com/swiper@6.8.4/swiper-bundle.min.css" />
   <script src="https://unpkg.com/swiper@6.8.4/swiper-bundle.min.js"></script>
-  <!-- YOUTUBE JS -->
-  <script defer src="./js/youtube.js"></script>
   <!-- ScrollMagic-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/ScrollMagic.min.js" integrity="sha512-8E3KZoPoZCD+1dgfqhPbejQBnQfBXe8FuwL4z/c8sTrgeDMFEnoyTlH3obB4/fV+6Sg0a0XF+L/6xS4Xx1fUEg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <!-- YOUTUBE JS -->
+  <script defer src="./js/youtube.js"></script>
+  <!-- COMMON JS -->
+  <script defer src="./js/common.js"></script>
   <!-- MAIN JS -->
   <script defer src="./js/main.js"></script>
+ 
 </head>
 <body>
   <!-- <span class="material-icons">login</span> -->
